--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,17 +7,6 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
-getrandom = { version = "0.2", features = ["js"] }
-yew = { version = "0.20.0", features = ["csr"] }
-wasm-bindgen = "0.2.83"
-
-[dependencies.web-sys]
-version = "0.3.4"
-features = [
-  'CanvasRenderingContext2d',
-  'Document',
-  'Element',
-  'HtmlCanvasElement',
-  'Window',
-]
+tui = "0.19.0"
+crossterm = "0.25"
 
